Shade Byte Buddy in attach module
- Move AutoValhallaAttachAgent into auto-valhalla-agent-attach (still v49)
- Relocate net.bytebuddy -> io.github.thunkware.auto.valhalla.internal.bytebuddy
  via maven-shade-plugin; createDependencyReducedPom drops unshaded dep
- Remove attach()/ByteBuddyAgent from agent shim; make isSupported() public
- Drop byte-buddy-agent/findbugs deps from agent module
- Wire attach jar into demo-runner, demo-runner5, and build.sh classpaths